# sm-political-analysis

./: .gitignore  .travis.yml  README.md  database.py  decorators.py  errors_exceptions.py  get_news.py  keywords.py  news.py  news_api_data_collection.py  newsapi_4.ipynb  political_analysis.ipynb  political_analysis.py  political_analysis.toml  pop_news.json  proto_pipeline.py  proxy.py  pyproject.toml  requirements.txt  tiktok.py  tiktok2.py  tiktoks.py  timer.py  top_headlines.json  tweet_stream.ipynb  tweet_stream.py  tweet_stream.sbt  tweet_stream.scala  tweet_stream_scala.ipynb  tweets.json  tweets.py
helper_functions/: clean_tweets.py  get_random_ua.py
tests/: conftest.py  test_database.py  test_news.py  test_political_analysis.py  test_tiktoks.py  test_tweets.py
