[tool.poetry]
name = "sm-political-analysis"
version = "0.1.0"
description = "Compare political news to Twitter & TikTok trends."
authors = ["mallory-jpg <65197541+mallory-jpg@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^3.10.0"
newsapi-python = "^0.2.6"
requests = "^2.26.0"
TikTokApi = "^4.0.1"
playwright = "^1.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
